--- a/crates/toolchain/tests/Cargo.toml
+++ b/crates/toolchain/tests/Cargo.toml
@@ -26,6 +26,7 @@ openvm-algebra-circuit.workspace = true
 openvm-ecc-circuit.workspace = true
 openvm-pairing-circuit.workspace = true
 openvm-keccak256-circuit.workspace = true
+openvm-algebra-guest = { workspace = true } # todo: remove
 openvm-ecc-guest = { workspace = true, features = ["halo2curves"] }
 openvm-pairing-guest = { workspace = true, features = [
     "halo2curves",
