--- a/extensions/ecc/tests/Cargo.toml
+++ b/extensions/ecc/tests/Cargo.toml
@@ -13,23 +13,16 @@ openvm-instructions = { workspace = true }
 openvm-stark-sdk.workspace = true
 openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-transpiler.workspace = true
-openvm-build.workspace = true
 openvm-algebra-circuit.workspace = true
 openvm-algebra-transpiler.workspace = true
 openvm-ecc-transpiler.workspace = true
 openvm-ecc-circuit.workspace = true
 openvm-ecc-guest.workspace = true
-openvm-rv32im-circuit.workspace = true
 openvm-rv32im-transpiler.workspace = true
-openvm-keccak256-circuit.workspace = true
 openvm-keccak256-transpiler.workspace = true
-openvm-platform = { workspace = true }
-openvm = { workspace = true }
 openvm-toolchain-tests = { path = "../../../crates/toolchain/tests" }
+openvm-sdk.workspace = true
 eyre.workspace = true
-num-bigint-dig.workspace = true
-serde = { workspace = true, features = ["alloc"] }
-derive_more = { workspace = true, features = ["from"] }
 
 [features]
 default = ["parallel"]
