feat: add to CI

--- a/.github/workflows/ecc.yml
+++ b/.github/workflows/ecc.yml
@@ -12,6 +12,7 @@ on:
       - "extensions/ecc/**"
       - "extensions/native/compiler/**"
       - "extensions/pairing/**"
+      - "extensions/ecc/tests/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
