--- a/.github/workflows/keccak256-extension.yml
+++ b/.github/workflows/keccak256-extension.yml
@@ -7,6 +7,7 @@ on:
     branches: ["**"]
     paths:
       - "extensions/keccak256/**"
+      - "extensions/keccak256/tests/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
