--- a/.github/workflows/rv32im-extension.yml
+++ b/.github/workflows/rv32im-extension.yml
@@ -7,7 +7,7 @@ on:
     branches: ["**"]
     paths:
       - "extensions/rv32im/**"
-
+      - "extensions/rv32im/tests/**"
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: true
