--- a/.github/workflows/bigint-extension.yml
+++ b/.github/workflows/bigint-extension.yml
@@ -35,3 +35,9 @@ jobs:
         working-directory: extensions/bigint/circuit
         run: |
           cargo nextest run --cargo-profile=fast
+
+      - name: Run bigint integration tests
+        working-directory: extensions/bigint/tests
+        run: |
+          rustup component add rust-src --toolchain nightly-2024-10-30-aarch64-unknown-linux-gnu
+          cargo nextest run --cargo-profile=fast
