feat: book examples crate

--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -10,12 +10,7 @@ on:
       - "crates/vm/**"
       - "crates/sdk/**"
       - "crates/cli/**"
-      - "extensions/algebra/tests/programs/**"
-      - "extensions/bigint/tests/programs/**"
-      - "extensions/ecc/tests/programs/**"
-      - "extensions/keccak256/tests/programs/**"
-      - "extensions/pairing/tests/programs/**"
-      - "extensions/rv32im/tests/programs/**"
+      - "examples/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
@@ -71,50 +66,21 @@ jobs:
           cargo build
           cargo run --bin cargo-openvm -- openvm keygen --config ./example/app_config.toml --output app.pk --vk-output app.vk
 
-      - name: Build algebra tests with CLI
-        working-directory: extensions/algebra/tests
+      - name: Install cargo-openvm
+        working-directory: crates/cli
         run: |
-          for file in $(ls ./programs); do
-            echo "building $file..."
-            cargo openvm build --example --name $file
-          done
+          rustup component add rust-src --toolchain nightly-2024-10-30-aarch64-unknown-linux-gnu
+          cargo install --force --locked --path .
 
-      - name: Build bigint tests with CLI
-        working-directory: extensions/bigint/tests
+      - name: Build book examples
+        working-directory: examples
         run: |
-          for file in $(ls ./programs); do
-            echo "building $file..."
-            cargo openvm build --example --name $file
-          done
-
-      - name: Build ecc tests with CLI
-        working-directory: extensions/ecc/tests
-        run: |
-          for file in $(ls ./programs); do
-            echo "building $file..."
-            cargo openvm build --example --name $file
-          done
-
-      - name: Build keccak256 tests with CLI
-        working-directory: extensions/keccak256/tests
-        run: |
-          for file in $(ls ./programs); do
-            echo "building $file..."
-            cargo openvm build --example --name $file
-          done
-
-      - name: Build pairing tests with CLI
-        working-directory: extensions/pairing/tests
-        run: |
-          for file in $(ls ./programs); do
-            echo "building $file..."
-            cargo openvm build --example --name $file
-          done
-
-      - name: Build rv32im tests with CLI
-        working-directory: extensions/rv32im/tests
-        run: |
-          for file in $(ls ./programs); do
-            echo "building $file..."
-            cargo openvm build --example --name $file
+          for dir in */; do
+            if [ -f "${dir}Cargo.toml" ]; then
+              echo "Building ${dir%/}"
+              cd "$dir"
+              cargo openvm build
+              cargo openvm build --features std
+              cd ..
+            fi
           done
