rename and clean

--- a/extensions/verifier/Cargo.toml
+++ b/extensions/verifier/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ax-snark-verifier"
+name = "openvm-snark-verifier"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
