--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -24,9 +24,8 @@ env:
 jobs:
   app-level-cli:
     runs-on:
-      - runs-on
-      - run-id=${{ github.run_id }}
-      - family=m7
+      - runs-on=${{ github.run_id }}
+      - runner=32cpu-linux-arm64
 
     steps:
       - uses: actions/checkout@v4
@@ -62,19 +61,6 @@ jobs:
       - name: Install cargo-openvm
         working-directory: crates/cli
         run: |
-          arch=$(uname -m)
-          case $arch in
-            arm64|aarch64)
-              rustup component add rust-src --toolchain nightly-2024-10-30-aarch64-unknown-linux-gnu
-              ;;
-            x86_64|amd64)
-              rustup component add rust-src --toolchain nightly-2024-10-30-x86_64-unknown-linux-gnu
-              ;;
-            *)
-              echo "Unsupported architecture: $arch"
-              exit 1
-              ;;
-          esac
           cargo install --force --locked --path .
 
       - name: Build book examples
