refactor: refactor sha256-air

--- a/extensions/sha256/guest/Cargo.toml
+++ b/extensions/sha256/guest/Cargo.toml
@@ -9,7 +9,7 @@ description = "Guest extension for Sha256"
 openvm = { workspace = true }
 openvm-platform = { workspace = true }
 
-sha2 = { version = "0.10", default-features = false, optional = true }
+sha2 = { version = "0.10", default-features = false }
 
 [features]
 default = []
