--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -29,7 +29,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
       - uses: dtolnay/rust-toolchain@nightly
       - uses: Swatinem/rust-cache@v2
         with:
@@ -40,23 +39,7 @@ jobs:
 
       - name: Install architecture specific tools
         run: |
-          arch=$(uname -m)
-          case $arch in
-            arm64|aarch64)
-              rustup component add rust-src --toolchain nightly-2024-10-30-aarch64-unknown-linux-gnu
-              ;;
-            x86_64|amd64)
-              rustup component add rust-src --toolchain nightly-2024-10-30-x86_64-unknown-linux-gnu
-              ;;
-            *)
-              echo "Unsupported architecture: $arch"
-              exit 1
-              ;;
-          esac
-
-      - name: Setup halo2
-        run: |
-          bash ./extensions/native/recursion/trusted_setup_s3.sh
+          rustup component add rust-src --toolchain nightly-2024-10-30
 
       - name: Install cargo-openvm
         working-directory: crates/cli
