--- a/.github/workflows/algebra-extension.yml
+++ b/.github/workflows/algebra-extension.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Run algebra integration tests
         working-directory: extensions/algebra/tests
         run: |
-          rustup component add rust-src --toolchain nightly-2024-10-30-aarch64-unknown-linux-gnu
+          rustup component add rust-src --toolchain nightly-2024-10-30
           cargo nextest run --cargo-profile=fast
