--- a/.github/workflows/ecc.yml
+++ b/.github/workflows/ecc.yml
@@ -53,13 +53,13 @@ jobs:
       - name: Run pairing integration tests
         working-directory: extensions/pairing/tests
         run: |
-          rustup component add rust-src --toolchain nightly-2024-10-30-aarch64-unknown-linux-gnu
+          rustup component add rust-src --toolchain nightly-2024-10-30
           RUST_MIN_STACK=8388608 cargo nextest run --cargo-profile=fast
 
       - name: Install cargo-openvm
         working-directory: crates/cli
         run: |
-          rustup component add rust-src --toolchain nightly-2024-10-30-aarch64-unknown-linux-gnu
+          rustup component add rust-src --toolchain nightly-2024-10-30
           cargo install --force --locked --path .
 
       - name: Build openvm-ecc-guest crate for openvm
@@ -70,5 +70,5 @@ jobs:
       - name: Run ecc integration tests
         working-directory: extensions/ecc/tests
         run: |
-          rustup component add rust-src --toolchain nightly-2024-10-30-aarch64-unknown-linux-gnu
+          rustup component add rust-src --toolchain nightly-2024-10-30
           cargo nextest run --cargo-profile=fast
