--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -35,23 +35,9 @@ jobs:
       - name: Install solc # svm should support arm64 linux
         run: (hash svm 2>/dev/null || cargo install --version 0.2.23 svm-rs) && svm install 0.8.19 && solc --version
 
-      - name: Install architecture specific tools
+      - name: Install tools
         run: |
-          arch=$(uname -m)
-          case $arch in
-            arm64|aarch64)
-              S5CMD_BIN="s5cmd_2.2.2_linux_arm64.deb"
-              rustup component add rust-src --toolchain nightly-2024-10-30-aarch64-unknown-linux-gnu
-              ;;
-            x86_64|amd64)
-              S5CMD_BIN="s5cmd_2.2.2_linux_amd64.deb"
-              rustup component add rust-src --toolchain nightly-2024-10-30-x86_64-unknown-linux-gnu
-              ;;
-            *)
-              echo "Unsupported architecture: $arch"
-              exit 1
-              ;;
-          esac
+          rustup component add rust-src --toolchain nightly-2024-10-30
 
           echo "Checking s5cmd"
           if type s5cmd &>/dev/null; then
