--- a/extensions/pairing/tests/programs/Cargo.toml
+++ b/extensions/pairing/tests/programs/Cargo.toml
@@ -28,20 +28,10 @@ k256 = { version = "0.13.3", default-features = false, features = [
 
 [features]
 default = []
-std = [
-    "serde/std",
-    "openvm/std",
-    "openvm-pairing-guest/std",
-]
+std = ["serde/std", "openvm/std", "openvm-pairing-guest/std"]
 
 bn254 = ["openvm-pairing-guest/bn254"]
 bls12_381 = ["openvm-pairing-guest/bls12_381"]
-<<<<<<< HEAD:crates/toolchain/tests/programs/Cargo.toml
-k256 = ["openvm-ecc-guest/k256", "dep:k256"]
-p256 = ["openvm-ecc-guest/p256"]
-heap-embedded-alloc = ["openvm/heap-embedded-alloc"]
-=======
->>>>>>> main:extensions/pairing/tests/programs/Cargo.toml
 
 [profile.release]
 panic = "abort"
