--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -23,6 +23,10 @@ jobs:
         with:
           cache-on-failure: true
 
+      - name: Generate docs
+        run: |
+          cargo doc --workspace
+
       - name: Run fmt
         run: |
           cargo fmt --all -- --check
