chore: switch halo2curves to compatible version
Turn off docs for test and bench crates

--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Generate docs
         run: |
-          cargo doc --workspace
+          cargo doc --workspace  --exclude "openvm-benchmarks" --exclude "*-tests" --exclude "*-test"
 
       - name: Run fmt
         run: |
