--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -44,12 +44,15 @@ metrics.workspace = true
 tracing.workspace = true
 itertools.workspace = true
 getset.workspace = true
+prometheus-client.workspace = true
+sysinfo.workspace = true
+once_cell = "1.20.2"
 
 [features]
 default = ["parallel"]
 bench-metrics = [
-    "openvm-circuit/bench-metrics",
-    "openvm-native-recursion/bench-metrics",
+  "openvm-circuit/bench-metrics",
+  "openvm-native-recursion/bench-metrics",
 ]
 profiling = ["openvm-circuit/function-span", "openvm-transpiler/function-span"]
 parallel = ["openvm-circuit/parallel"]
