--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "crates/sdk",
     "crates/cli",
     "crates/circuits/mod-builder",
+    "crates/circuits/new-poseidon2-air",
     "crates/circuits/poseidon2-air",
     "crates/circuits/primitives",
     "crates/circuits/primitives/derive",
@@ -100,6 +101,7 @@ lto = "thin"
 openvm-sdk = { path = "crates/sdk", default-features = false }
 cargo-openvm = { path = "crates/cli", default-features = false }
 openvm-mod-circuit-builder = { path = "crates/circuits/mod-builder", default-features = false }
+openvm-new-poseidon2-air = { path = "crates/circuits/new-poseidon2-air", default-features = false }
 openvm-poseidon2-air = { path = "crates/circuits/poseidon2-air", default-features = false }
 openvm-circuit-primitives = { path = "crates/circuits/primitives", default-features = false }
 openvm-circuit-primitives-derive = { path = "crates/circuits/primitives/derive", default-features = false }
@@ -164,6 +166,7 @@ p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c
 p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
 p3-poseidon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
 p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
+p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
 p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
 p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
 p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" } # the "parallel" feature is NOT on by default to allow single-threaded benchmarking
