--- a/extensions/native/circuit/Cargo.toml
+++ b/extensions/native/circuit/Cargo.toml
@@ -12,7 +12,7 @@ openvm-stark-backend = { workspace = true }
 openvm-stark-sdk = { workspace = true }
 openvm-circuit-primitives = { workspace = true }
 openvm-circuit-primitives-derive = { workspace = true }
-openvm-poseidon2-air = { workspace = true }
+openvm-new-poseidon2-air = { workspace = true }
 openvm-circuit = { workspace = true }
 openvm-circuit-derive = { workspace = true }
 openvm-instructions = { workspace = true }
@@ -28,6 +28,7 @@ derive_more = { workspace = true, features = ["from"] }
 rand.workspace = true
 eyre.workspace = true
 serde.workspace = true
+rayon.workspace = true
 
 [dev-dependencies]
 openvm-stark-sdk = { workspace = true }
