--- a/crates/circuits/sha256-air/Cargo.toml
+++ b/crates/circuits/sha256-air/Cargo.toml
@@ -7,13 +7,9 @@ edition.workspace = true
 [dependencies]
 openvm-circuit-primitives = { workspace = true }
 openvm-stark-backend = { workspace = true }
-
+sha2 = { version = "0.10", features = ["compress"] }
 rand.workspace = true
 
-[dev-dependencies]
-p3-symmetric = { workspace = true }
-test-case = "3.3.1"
-ark-ff = { version = "^0.4.0", default-features = false }
 
 [features]
 default = ["parallel"]
