--- a/Cargo.toml
+++ b/Cargo.toml
@@ -114,8 +114,9 @@ openvm-platform = { path = "crates/toolchain/platform", default-features = false
 openvm-transpiler = { path = "crates/toolchain/transpiler", default-features = false }
 openvm-circuit = { path = "crates/vm", default-features = false }
 openvm-circuit-derive = { path = "crates/vm/derive", default-features = false }
-openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v0.1.1-alpha", default-features = false }
-openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v0.1.1-alpha", default-features = false }
+# WARNING: This is a temporary workaround to allow the tests to run. DO NOT COMMIT THIS CHANGE.
+openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", rev = "242c524", default-features = false }
+openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", rev = "242c524", default-features = false }
 
 # Extensions
 openvm-algebra-circuit = { path = "extensions/algebra/circuit", default-features = false }
@@ -161,7 +162,7 @@ p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4
 p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
 p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
 p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
-p3-mds = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
+p3-mds = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9starb267c4" }
 p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
 p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
 p3-poseidon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "9b267c4" }
