--- a/crates/circuits/poseidon2-air/Cargo.toml
+++ b/crates/circuits/poseidon2-air/Cargo.toml
@@ -11,6 +11,7 @@ license.workspace = true
 p3-monty-31 = { workspace = true }
 p3-symmetric = { workspace = true }
 p3-poseidon2 = { workspace = true }
+p3-poseidon2-air = { workspace = true }
 zkhash = { workspace = true }
 
 openvm-circuit-primitives = { workspace = true }
@@ -20,6 +21,8 @@ openvm-stark-sdk = { workspace = true }
 rand.workspace = true
 lazy_static.workspace = true
 itertools.workspace = true
+tracing.workspace = true
+
 
 [dev-dependencies]
 p3-symmetric = { workspace = true }
