--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -38,6 +38,9 @@ jobs:
       matrix: ${{ steps.create-matrix.outputs.matrix }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
+
       - name: Create benchmark matrix from JSON
         id: create-matrix
         run: |
