--- a/extensions/ecc/circuit/Cargo.toml
+++ b/extensions/ecc/circuit/Cargo.toml
@@ -30,6 +30,7 @@ eyre = { workspace = true }
 num-integer = { workspace = true }
 serde = { workspace = true }
 serde_with = { workspace = true }
+itertools = { workspace = true }
 
 [dev-dependencies]
 openvm-stark-sdk = { workspace = true }
