--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -40,13 +40,19 @@ jobs:
 
       - name: Run fmt, clippy for guest
         run: |
-          # List all guest program crate paths
-          for crate_path in benchmarks/programs/* examples/*; do
+          # Find all directories named "programs" and include additional static paths
+          for crate_path in $(find . -type d -name "programs" -exec find {} -mindepth 0 -maxdepth 0 -type d \;) benchmarks/programs/* examples/*; do
             # Check if Cargo.toml exists in the directory
             if [ -f "$crate_path/Cargo.toml" ]; then
               echo "Running cargo fmt, clippy for $crate_path"
-              cargo fmt --manifest-path "$crate_path/Cargo.toml" --all -- --check 
-              cargo clippy --manifest-path "$crate_path/Cargo.toml" --all-targets --features std -- -D warnings 
+              cargo fmt --manifest-path "$crate_path/Cargo.toml" --all -- --check
+              if [[ "$crate_path" == *"extensions/ecc/tests/programs"* ]]; then
+                echo "Running cargo clippy with k256 feature for $crate_path"
+                cargo clippy --manifest-path "$crate_path/Cargo.toml" --all-targets --features "std k256" -- -D warnings
+              else
+                echo "Running cargo clippy for $crate_path"
+                cargo clippy --manifest-path "$crate_path/Cargo.toml" --all-targets --features std -- -D warnings
+              fi
             else
               echo "Skipping $crate_path as it does not contain a Cargo.toml"
             fi
