--- a/extensions/verifier/Cargo.toml
+++ b/extensions/verifier/Cargo.toml
@@ -14,7 +14,7 @@ openvm-keccak256-guest = { workspace = true, default-features = false }
 openvm-ecc-guest = { workspace = true, features = ["halo2curves"] }
 snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.7-git", default-features = false, features = ["halo2-axiom"] }
 ff = { workspace = true }
-halo2curves-axiom = { workspace = true }
+halo2curves-axiom = { version = "0.5.3" } 
 itertools.workspace = true
 rand_core = "0.6.4"
 num-bigint = { workspace = true, features = ["std"] }
