--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -49,6 +49,9 @@ jobs:
               if [[ "$crate_path" == *"extensions/ecc/tests/programs"* ]]; then
                 echo "Running cargo clippy with k256 feature for $crate_path"
                 cargo clippy --manifest-path "$crate_path/Cargo.toml" --all-targets --features "std k256" -- -D warnings
+              elif [[ "$crate_path" == *"extensions/pairing/tests/programs"* ]]; then
+                echo "Running cargo clippy with openvm_pairing_guest::bn254 feature for $crate_path"
+                cargo clippy --manifest-path "$crate_path/Cargo.toml" --all-targets --features "std bn254" -- -D warnings
               else
                 echo "Running cargo clippy for $crate_path"
                 cargo clippy --manifest-path "$crate_path/Cargo.toml" --all-targets --features std -- -D warnings
