--- a/Cargo.toml
+++ b/Cargo.toml
@@ -195,6 +195,7 @@ strum = { version = "0.26.3", features = ["derive"] }
 enum-utils = "0.1.1"
 backtrace = "0.3.71"
 metrics = "0.23.0"
+metrics-derive = "0.1.0"
 cfg-if = "1.0.0"
 inferno = "0.11.21"
 test-case = "3.3.1"
