--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -53,28 +53,20 @@ ark-ff = { version = "^0.4.0", default-features = false }
 test-case.workspace = true
 test-log.workspace = true
 lazy_static.workspace = true
-openvm-ecc-guest = { workspace = true, features = ["halo2curves", "k256"] }
-openvm-circuit = { workspace = true, features = ["test-utils"] }
+hex.workspace = true
 
+openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-stark-sdk.workspace = true
 openvm-native-circuit.workspace = true
 openvm-native-compiler.workspace = true
-openvm-bigint-circuit.workspace = true
-openvm-rv32im-circuit.workspace = true
 openvm-rv32im-transpiler.workspace = true
-openvm-algebra-circuit.workspace = true
-openvm-ecc-circuit.workspace = true
-openvm-pairing-circuit.workspace = true
 openvm-keccak256-circuit.workspace = true
 openvm-keccak256-transpiler.workspace = true
 
-halo2curves-axiom = { workspace = true }
-hex.workspace = true
-
 [features]
-default = ["parallel", "mimalloc"]
+default = ["parallel", "mimalloc", "bench-metrics"]
 parallel = ["openvm-stark-backend/parallel", "dep:rayon"]
-test-utils = ["openvm-ecc-guest/halo2curves", "dep:openvm-stark-sdk"]
+test-utils = ["dep:openvm-stark-sdk"]
 bench-metrics = [
     "dep:metrics",
     "dep:inferno",
