--- a/extensions/bigint/circuit/Cargo.toml
+++ b/extensions/bigint/circuit/Cargo.toml
@@ -24,6 +24,7 @@ derive-new.workspace = true
 derive_more = { workspace = true, features = ["from"] }
 rand.workspace = true
 serde.workspace = true
+parking_lot = { workspace = true }
 
 [dev-dependencies]
 openvm-stark-sdk = { workspace = true }
