--- a/extensions/keccak256/circuit/Cargo.toml
+++ b/extensions/keccak256/circuit/Cargo.toml
@@ -30,6 +30,7 @@ derive_more = { workspace = true, features = ["from"] }
 rand.workspace = true
 eyre.workspace = true
 serde.workspace = true
+parking_lot.workspace = true
 
 [dev-dependencies]
 openvm-stark-sdk = { workspace = true }
