--- a/crates/circuits/sha256-air/Cargo.toml
+++ b/crates/circuits/sha256-air/Cargo.toml
@@ -10,6 +10,13 @@ openvm-stark-backend = { workspace = true }
 sha2 = { version = "0.10", features = ["compress"] }
 rand.workspace = true
 
+[dev-dependencies]
+openvm-stark-sdk = { workspace = true }
+test-case.workspace = true
+test-log.workspace = true
+lazy_static.workspace = true
+openvm-circuit = { workspace = true, features = ["test-utils"] }
+hex.workspace = true
 
 [features]
 default = ["parallel"]
