--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,6 +97,10 @@ incremental = true
 lto = "thin"
 
 [workspace.dependencies]
+# Stark Backend
+openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v0.1.3-alpha", default-features = false }
+openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v0.1.3-alpha", default-features = false }
+
 # OpenVM
 openvm-sdk = { path = "crates/sdk", default-features = false }
 cargo-openvm = { path = "crates/cli", default-features = false }
@@ -113,8 +117,7 @@ openvm-platform = { path = "crates/toolchain/platform", default-features = false
 openvm-transpiler = { path = "crates/toolchain/transpiler", default-features = false }
 openvm-circuit = { path = "crates/vm", default-features = false }
 openvm-circuit-derive = { path = "crates/vm/derive", default-features = false }
-openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v0.1.3-alpha", default-features = false }
-openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v0.1.3-alpha", default-features = false }
+openvm-toolchain-tests = { path = "crates/toolchain/tests", default-features = false }
 
 # Extensions
 openvm-algebra-circuit = { path = "extensions/algebra/circuit", default-features = false }
