--- a/extensions/snark-verifier/Cargo.toml
+++ b/extensions/snark-verifier/Cargo.toml
@@ -1,17 +1,18 @@
 [package]
 name = "openvm-snark-verifier"
+description = "OpenVM guest library for SNARK verification"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 [dependencies]
-openvm-pairing-guest = { workspace = true, features = [
-    "halo2curves",
-    "bn254",
-    "bls12_381",
-] }
+openvm = { workspace = true, features = ["std"] }
+openvm-pairing-guest = { workspace = true, features = ["bn254"] }
 openvm-keccak256-guest = { workspace = true, default-features = false }
-openvm-ecc-guest = { workspace = true, features = ["halo2curves"] }
+openvm-algebra-guest = { workspace = true }
+openvm-ecc-guest = { workspace = true }
 snark-verifier-sdk = { workspace = true, default-features = false, features = [
     "halo2-axiom",
     "loader_evm",
@@ -19,14 +20,20 @@ snark-verifier-sdk = { workspace = true, default-features = false, features = [
 ff = { workspace = true }
 halo2curves-axiom = { workspace = true }
 itertools.workspace = true
-num-bigint = { workspace = true, features = ["std"] }
-num-traits.workspace = true
-rand.workspace = true
-lazy_static.workspace = true
-group = "0.13.0"
 serde = { workspace = true, features = ["derive", "alloc"] }
+lazy_static.workspace = true
 
 [dev-dependencies]
-rng = "0.1.0"
-subtle = "2.6.1"
-rand_core = "0.6.4"
+# the following are all meant for testing only on host:
+rand.workspace = true
+eyre.workspace = true
+openvm-toolchain-tests = { workspace = true, features = ["parallel"] }
+openvm-build = { workspace = true }
+openvm-sdk = { workspace = true }
+openvm-circuit = { workspace = true }
+openvm-algebra-circuit = { workspace = true }
+openvm-ecc-circuit = { workspace = true }
+openvm-pairing-circuit = { workspace = true }
+
+[features]
+default = []
