hacky add metadata

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -193,10 +193,45 @@ jobs:
             --benchmark-results-link "https://github.com/${{ github.repository }}/blob/benchmark-results/${BENCHMARK_RESULTS_PATH}" \
             --summary-md-path summary.md
 
+          COMMIT_URL=https://github.com/${{ github.repository }}/commit/${CURRENT_SHA}
+          BENCHMARK_WORKFLOW_URL=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+          # add metadata to markdown files
+          source ci/scripts/utils.sh
+          # Parse matrix data into associative arrays
+          while IFS= read -r line; do
+            # Convert .json to .md
+            md_file="${line%.json}.md"
+
+            id=$(echo '${{ needs.create-matrix.outputs.matrix }}' | jq -r --arg file "$line" '.[] |
+              select(.id == ($file | split("-")[0])) |
+              {
+                max_segment_length: .max_segment_length,
+                instance_type: .instance_type,
+                memory_allocator: .memory_allocator
+              }')
+
+            if [ ! -z "$id" ]; then
+              max_segment_length=$(echo "$id" | jq -r '.max_segment_length')
+              instance_type=$(echo "$id" | jq -r '.instance_type')
+              memory_allocator=$(echo "$id" | jq -r '.memory_allocator')
+
+              # Call add_metadata for each file with its corresponding data
+              add_metadata \
+                "$md_file" \
+                "$max_segment_length" \
+                "$instance_type" \
+                "$memory_allocator" \
+                "$COMMIT_URL" \
+                "$BENCHMARK_WORKFLOW_URL"
+            fi
+          done <<< "$json_files"
+
           echo "" >> summary.md
-          echo "Commit: https://github.com/${{ github.repository }}/commit/${CURRENT_SHA}" >> summary.md
+          echo "Commit: $COMMIT_URL" >> summary.md
           echo "" >> summary.md
-          echo "[Benchmark Workflow](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> summary.md
+          echo "[Benchmark Workflow]($BENCHMARK_WORKFLOW_URL)" >> summary.md
+
           TMP_DIR=/tmp/benchmark-results/${{ env.CURRENT_SHA }}
           echo "TMP_DIR=${TMP_DIR}" >> $GITHUB_ENV
           mkdir -p ${TMP_DIR}
