--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -34,6 +34,7 @@ jobs:
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=64cpu-linux-arm64
+      - tag=extension-${{ matrix.extension.name }}
 
     steps:
       - uses: actions/checkout@v4
