--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -7,6 +7,7 @@ on:
     branches: ["**"]
     paths:
       - "extensions/**"
+      - ".github/workflows/extension-tests.yml"
       # Exclude RISC-V test vectors
       - "!extensions/rv32im/**"
 
