feat(ci): add ecc and pairing extensions to test matrix

--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -26,8 +26,10 @@ jobs:
         extension:
           - {name: 'algebra', path: 'algebra'}
           - {name: 'bigint', path: 'bigint'}
+          - {name: 'ecc', path: 'ecc'}
           - {name: 'keccak256', path: 'keccak256'}
           - {name: 'native', path: 'native'}
+          - {name: 'pairing', path: 'pairing'}
           - {name: 'sha256', path: 'sha256'}
       # Ensure tests run in parallel even if one fails
       fail-fast: false
