--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -22,7 +22,7 @@ on:
         required: false
         description: Application level log blowup
         default: 2
-      agg_log_blowup:
+      leaf_log_blowup:
         type: number
         required: false
         description: Aggregation (leaf) level log blowup
@@ -71,7 +71,7 @@ on:
         required: false
         description: Application level log blowup
         default: 2
-      agg_log_blowup:
+      leaf_log_blowup:
         type: number
         required: false
         description: Aggregation (leaf) level log blowup
@@ -136,7 +136,7 @@ jobs:
 
       - name: Display workflow inputs
         run: echo "${{ toJSON(inputs) }}"
-      - name: Feature flags
+      - name: "Feature flags: aggregation"
         if: contains(github.event.pull_request.labels.*.name, 'run-benchmark') || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         run: |
           echo "Adding aggregation feature flag"
@@ -187,7 +187,7 @@ jobs:
           INSTANCE_TYPE="--instance_type ${{ inputs.instance_type }}"
           MEMORY_ALLOCATOR="--memory_allocator ${{ inputs.memory_allocator }}"
           APP_ARG="--app_log_blowup ${{ inputs.app_log_blowup }}"
-          AGG_ARG="--agg_log_blowup ${{ inputs.agg_log_blowup }}"
+          AGG_ARG="--leaf_log_blowup ${{ inputs.leaf_log_blowup }}"
           MAX_SEGMENT_LENGTH="--max_segment_length ${{ inputs.max_segment_length }}"
           OUTPUT_PATH="--output_path $METRIC_PATH"
           echo "INPUT_ARGS=${INSTANCE_TYPE} ${MEMORY_ALLOCATOR} ${APP_ARG} ${AGG_ARG} ${MAX_SEGMENT_LENGTH} ${OUTPUT_PATH} ${INPUT_ARGS}" >> $GITHUB_ENV
